[package]
name = "nat"
version = "0.1.0"
authors = ["Qian Linfeng <thewawar@gmail.com>"]

[dependencies]
bytes = "^0.4.9"
byteorder = "1.2.6"
log = "^0.4.3"
failure = "^0.1.2"
futures = "^0.1.23"
tokio = "^0.1.7"
tokio-core = "^0.1.17"
tokio-codec = "^0.1.0"
tokio-timer = "^0.2.5"
tokio-shared-udp-socket = "~0.5.1"
serde = "^1.0.71"
serde_derive = "^1.0.71"
secp256k1 = { version = "^0.10.0", features=["serde"] }
tiny-keccak = "1.4.2"
bincode = "^1.0.1"
get_if_addrs = "^0.5.3"
net2 = "^0.2.33"
igd = "^0.7.0"
rustun = "^0.1.5"
fibers = "^0.1.11"
lazy_static = "^1.1.0"
rand = "^0.5.5"

[dev-dependencies]
clap = "^2.32.0"
tokio-io = "^0.1.7"
env_logger = "^0.5.12"